--- a/607Week2/607Week2Rmarkdown.Rmd
+++ b/607Week2/607Week2Rmarkdown.Rmd
@@ -7,14 +7,16 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 
 
-library(RMySQL)
+# Set environment
 
+library(RMySQL)
+library(ggplot2)
 
 ```
 
 ## Assignment SQL and R 
 
-Choose six recent popular movies.  Ask at least five people that you know (friends, family, classmates, imaginary friends) to rate each of these movie that they have seen on a scale of 1 to 5.  Take the results (observations) and store them in a SQL database.  Load the information into an R dataframe. 
+Choose six recent popular movies.  Ask at least five people that you know (friends, family, classmates, imaginary friends) to rate each of these movie that they have seen on a scale of 1 to 5.  Take the results (observations) and store them in a SQL database.  Load the information into an R data frame. 
 
 ## Database creation
 
@@ -24,22 +26,53 @@ I first created a MySQL database containing 3 tables.
 * Movies tables
 * Transaction/fact table
 
- ![](https://github.com/chrisestevez/DataAnalytics/blob/master/607Week2/Schema.PNG)
 
-```{r cars}
+
+ ![](https://github.com/chrisestevez/DataAnalytics/blob/master/607Week2/Schema.PNG)
  
 
-summary(cars)
+```{r}
+ # set MySQL information
+Yuser = 'root'
+Ypassword ='password' #Insert Database password
+Ydbname ='607week2'
+Yhost = 'localhost'
 
+mydb = dbConnect(MySQL(), user= Yuser, password=Ypassword, dbname=Ydbname, host=Yhost)
+
+# List all tables
+dbListTables(mydb)
+
+# List all columns in each table
+dbListFields(mydb, 'movieinfo')
+dbListFields(mydb, 'userinfo')
+dbListFields(mydb, 'userinfo')
+
+# Created query to request data
+Query = dbSendQuery(mydb, "select userinfo.userName, userinfo.usersex,
+                  movieinfo.MovieName,Tmoviereview.TUserRating
+                  from userinfo left join tmoviereview 
+                 on UserInfoID = TUserInfoID
+                 left join movieinfo
+                 on TMovieInfoID = MovieInfoID
+                    order by userinfo.userName asc")
+
+# Fetched data into data frame
+dataFrame = data.frame( fetch(Query, n=-1))
+
+# Description of data
+str(dataFrame)
+
+dataFrame
+```
+
+## Plotting Data
+
+```{r pressure, echo=FALSE,fig.align='center',fig.width = 18, fig.height= 12}
+
+ggplot(dataFrame, aes(userName,TUserRating,fill =userName) ) +
+  geom_bar(stat="identity") + facet_grid(~MovieName )+
+  ggtitle("Movies Rated By Users")
 
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
